# tunemeld

./: .cache  .env.local.example  .env.staging  .env.test  .gitignore  .golangci.yml  .pre-commit-config.yaml  .prettierrc  .ruff.toml  .vercelignore  BRANCH_PROTECTION_SETUP.md  CLAUDE.md  CNAME  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.etl  Dockerfile.gcr  Dockerfile.ghcr  Dockerfile.original  Dockerfile.redhat  FEATURE_BRANCH_WORKFLOW.md  FORCE_RAILWAY_REDEPLOY  FRONTEND_AUDIT.md  FRONTEND_STYLING_PLAN.md  GEMINI.md  Makefile  Pipfile  Procfile  RAILWAY_DEPLOYMENT_TIMESTAMP  README.md  SECURITY.md  SETUP.md  SHIMMER_REFACTOR_PLAN.md  STAGING_SETUP.md  TESTING_GUIDE.md  UPDATES_SUMMARY.md  VERCEL.md  WORKING.md  agent-sandbox-changes.patch  (+69 more)
.claude/: data_eng_agent.md  settings.json
.ebextensions/: nginx_custom_config.config
.ebextensions/nginx/: custom_config.conf
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs  tree-state
.git-rewrite/t/: .gitignore  aggregator.py  extractor.py  pyproject.toml  requirements.txt
.github/workflows/: audio_features_etl.yml  cache_testing.yml  ci.yml  clear-and-warm-cache.yml  cloudflare-pages-config.yml  cloudflare-pages.yml  credential-validation.yml  deploy_kv_worker.yml  deploy_worker.yml  deployment-cache-warming.yml  fetch_real_staging_data.yml  golangci-lint  lint.yml  main.yml  play_count.yml  playlist_etl.yml  playlist_etl2.yml  playlist_etl_2.yml  playlists_etl.yml  postgres-migration.yml  postgres_etl.yml  postgres_raw_extract.yml  redis_cache_test.yml  (+6 more)
.railway/: config.json
api/: debug.py  debug_paths.py  django_app.py  django_test.py  fastapi_gql.py  fastapi_simple.py  fastapi_test.py  hello.py  hybrid_gql.py  index.py  path_debug.py  simple.py  simple_gql.py  simple_requirements_test.py  simple_test.py  test.py  test_django_distill.py  wsgi.py
backend/: migration_safety_check.py  package-lock.json  package.json
cloudflare_worker/: package-lock.json  package.json  wrangler.toml
cmd/: extract.go  main.go
config/: README.md  constants.go  track.go
dev/: constants.go  utils.go
django_backend/: .env.cache  Dockerfile  Dockerfile.fixed  Dockerfile.minimal  README.md  REDIS_CACHE_SETUP.md  __init__.py  etl_cron.py  fetch_real_api_data.py  fix_migration_history.py  fix_unicode_data.py  local_settings.py  manage.py  models.py  nixpacks.toml  one_time_data_fetch.py  railway-test.txt  railway.json  requirements.txt  settings.py  simple_api_fetch.py  startup_debug.py  test_server.py  urls.py  utils.py  validation.ipynb  views.py  wipe_schema.py
docs/: 404.html  ApiService.js  BACKEND_UPDATE_PROJECT.md  CNAME  DATA_LAYER.md  FRONTEND_MIGRATION.md  PROJECT_OVERVIEW.md  StateManager.js  VIEW_COUNT_MIGRATION.md  chart.js  config.js  config.json  error-handler.js  genre-loader.js  genre-manager.js  graphql-client.js  header.css  header.js  index.html  last-updated.txt  loadSilverData.js  main.js  overlay.js  playlist-metadata.js  playlist.css  playlist.js  privacy-policy.html  privacy_policy.html  router.js  selectors.js  servicePlayer.js  service_player.js  soundcloud_player.css  soundcloud_player.js  styles.css  terms-of-use.html  title.js  tosPrivacy.js
extractors/: apple_music.go  base.go  constants.go  json_utils.go  soundcloud.go  spotify.go
frontend/: .eslintrc.cjs  .prettierrc.cjs  404.html  _headers  add-js-extensions.js  build.js  components.json  dev.js  index-v1.html  index-v2.html  index.html  package-lock.json  package.json  tailwind.config.js  temp_redeploy_trigger.txt  themeInit.js  tsconfig.json  vite.config.ts
go_migration/: README.md  Untitled Diagram.drawio  constants.go  go.mod  tunemeld.drawio  web_scraper.go
gold/: aggregated_playlist.go  database.go  utils.go
gql/: button_labels.py  playlist.py  schema.py  service.py  track.py
kv_worker/: .deployment_trigger  worker.py  wrangler.toml
lambda_functions/: constants.py  extractor.py  lambda_function.py  placeholder.py  pyproject.toml  requirements.txt  selenium_webdriver.py  soundcloud_extractor.py
migration/: Makefile  aggregator.py  applemusic_danceplaylist_extract.json  applemusic_danceplaylist_transformed.json  extract.py  extractors.py  soundcloud_danceplaylist_extract.json  spotify_danceplaylist_extract.json  transform.py  transformers.py
playlist_data/: apple_music_cache.json  apple_music_edm.json  soundcloud_edm.json  spotify_edm.json
playlist_etl/: __init__.py  aggregate.py  aggregate2.py  aggregator.py  apple_music_api.py  cache_utils.py  config.py  constants.py  debugging_notebook.ipynb  debugging_scratch.ipynb  debugging_scratch.ipynb.ipynb  extract.py  functional_clients.py  helpers.py  historical_view_count.py  main.py  main_view_count.py  models.py  mongo_db_client.py  rapid_api_client.py  schedule_config.py  services.py  services_old.py  spotdl_client.py  test_aggregate.py  test_extract.py  test_spotify_xpath.ipynb  test_transform_playlist.py  test_transform_playlist_metadata.py  test_utils.py  track_sentiment.py  transform.py  transform2.py  transform_playlist.py  transform_playlist_metadata.py  utils.py  view_count.py  view_count2.py
railway-mcp/: CHANGELOG.md  CONTRIBUTING.md  README.md  tsconfig.json
scripts/: README.md  agent-make-commands  agent-sandbox  dev-server.py  generate_pipfile.py  generate_requirements.py  get-pr-context.sh  postgres_extract.py  setup-railway-mcp.js  setup-railway-mcp.sh  validate_credentials.py
service/: config.go  constants.go  fetcher.go  json_utils.go  local.go  rapid_api_client.go  rapidapi.go  utils.go
test_folder/: cache_apple_music.json  cache_soundcloud.json  cache_spotify.json
tests/: aggregate2_test.py  aggregate_test.py  conftest.py  extract_test.py  integration_test.py  test_api_integration.py  test_transformers.py  test_utils.py  transform2_test.py  transform_playlist_metadata_test.py  transform_test.py  utils_test.py
transform/: apple_music.go  soundcloud.go  track.go
transformers/: album_covers.go  apple_music.go  base.go  soundcloud.go  spotify.go
tunemeld/: constants.go  rapidapi.go
utils/: django_setup.py
(+591 files in other folders)
