[tool.poetry]
name = "playlist_aggregator_backend"
version = "0.1.0"
description = "playlist aggregator from soundcloud, apple music and spotify"
authors = ["elijaghab@gmail.com"]

[tool.poetry.dependencies]
beautifulsoup4 = "4.12.2"
fuzzywuzzy = "0.18.0"
python = ">=3.7,<3.8.dev0"
requests = "2.31.0"
selenium = "3.8.0"
urllib3 = ">=1.25.4,<1.27"

